                                                        -*- fundamental -*-

Changelog for 1.11 Series
Unreleased

Changelog for 1.11.0

Added functionalities
* AR/AP transactions and invoices buttons determined by configuration
* AR/AP invoice history shows more actions, user and timestamp (#5873)
* Bank statement parser for reconciliation through configuration (#7050)
* System > Users menu item listing users in the company (#7032)
* More webservice APIs (#7056, ...)
* Total paid and Remaining balance summaries added to invoices (#7130)
* Configurable directories (e.g. directory for UI templates) (#7236)
* Tracking of user name in AR/AP history (#5023)
* Printing of GL and cash transfer transactions (#7310)
* JavaScript unit tests built on Jest
* Database content consistency checks in setup.pl (#7265)
* Barcode support added (back) on invoices (regressed since 1.5) (#1584)
* Loading template-sets with 'ledgersmb-admin template load-all' (#7367)

Changed functionalities
* Fresh new application logo and login page layout (#7317, #7319)
* More database statistics reported after upgrade completion (#7017)
* System > Sequences lists next value for consistency with Defaults (#7054)
* Posted transactions show as read-only to differentiate from saved ones
* 'ledgersmb-common.css' moved from UI/css/ to UI/css/global/ (#7316)

Removed functionalities
* Reconciliation file parser customization (#7050)
* Inaccessible (partially duplicated) Colombian reports (#7138)
* Customization through import of 'scripts/custom/*.pl' (#7138)

Bugs fixed
* Performance fixes for stored procedures being slow on huge databases (#7072)
* Multiple fixes on AR/AP template transactions
* Command 'setup' of ledgersmb-admin erroneously marked unimplemented (#7367)

Code cleanup
* Continued removal of code based on the DBObject coding paradigm

Dependency updates
* 


Changelog for 1.10 Series
Released 2022-10-08

Changelog for 1.10.16