@@ -800,7 +800,7 @@ Given qr/that standard payment terms apply for "(.+)"/, sub {
         $dbh->do(q{
               SELECT account__save(NULL, 'DISC', 'Payment discounts',
                  'E', NULL, (select id from account_heading where accno='5600'),
-                 false, false, ARRAY['AR_discount','AP_discount']::text[],
+                 null, false, false, ARRAY['AR_discount','AP_discount']::text[],
                  false, false);
             })
             or die $dbh->errstr;
